Add CPUFriend.kext and update OpenCore config
Added CPUFriend.kext to EFI/OC/Kexts and its configuration in config.plist. Updated config.plist to enable USBMapX99-E5.kext and disable CPUFriend.kext, USBToolBox.kext, and UTBDefault.kext. Also updated oldConfig.plist to disable USBToolBox.kext and UTBDefault.kext.

--- a/EFI/OC/oldConfig.plist
+++ b/EFI/OC/oldConfig.plist
@@ -824,7 +824,7 @@
                     <key>Comment</key>
                     <string>V1.2.0</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>ExecutablePath</key>
                     <string>Contents/MacOS/USBToolBox</string>
                     <key>MaxKernel</key>
@@ -842,7 +842,7 @@
                     <key>Comment</key>
                     <string>V1.0</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>ExecutablePath</key>
                     <string></string>
                     <key>MaxKernel</key>
