--- a/EFI/OC/config.plist.old.plist
+++ b/EFI/OC/config.plist.old.plist
@@ -347,63 +347,42 @@
                     <key>model</key>
                     <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D DMI2</string>
                 </dict>
-                <key>PciRoot(0x0)/Pci(0x1,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,1,0</string>
-                    <key>device_type</key>
-                    <string>PCI bridge</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D PCI Express Root Port 1</string>
-                </dict>
                 <key>PciRoot(0x0)/Pci(0x1,0x0)/Pci(0x0,0x0)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
                     <string>Internal@0,1,0/0,0</string>
                     <key>built-in</key>
-                    <data>AQAAAA==</data>
+                    <data>AA==</data>
                     <key>device_type</key>
                     <string>Non-Volatile memory controller</string>
                     <key>model</key>
                     <string>SM2263EN/SM2263XT (DRAM-less) NVMe SSD Controllers</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x1,0x1)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,1,1</string>
-                    <key>device_type</key>
-                    <string>PCI bridge</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D PCI Express Root Port 1</string>
                 </dict>
                 <key>PciRoot(0x0)/Pci(0x1,0x1)/Pci(0x0,0x0)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
                     <string>Internal@0,1,1/0,0</string>
                     <key>built-in</key>
-                    <data>AQAAAA==</data>
+                    <data>AA==</data>
                     <key>device_type</key>
                     <string>Non-Volatile memory controller</string>
                     <key>model</key>
                     <string>WD SN560/SN740/SN770/SN5000 NVMe SSD</string>
                 </dict>
-                <key>PciRoot(0x0)/Pci(0x11,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,17,0</string>
-                    <key>device_type</key>
-                    <string>Unassigned class</string>
-                    <key>model</key>
-                    <string>C610/X99 series chipset SPSR</string>
-                </dict>
                 <key>PciRoot(0x0)/Pci(0x11,0x4)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
                     <string>Internal@0,17,4</string>
+                    <key>built-in</key>
+                    <data>AA==</data>
+                    <key>compatible</key>
+                    <string>pci8086,8c02</string>
+                    <key>device-id</key>
+                    <string>0x8C02</string>
                     <key>device_type</key>
-                    <string>SATA controller</string>
+                    <string>SATA Controller</string>
                     <key>model</key>
-                    <string>C610/X99 series chipset sSATA Controller [AHCI mode]</string>
+                    <string>Intel 8 Series/C220 Series Chipset Family SATA AHCI Controller</string>
                 </dict>
                 <key>PciRoot(0x0)/Pci(0x14,0x0)</key>
                 <dict>
@@ -414,24 +393,6 @@
                     <key>model</key>
                     <string>C610/X99 series chipset USB xHCI Host Controller</string>
                 </dict>
-                <key>PciRoot(0x0)/Pci(0x16,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,22,0</string>
-                    <key>device_type</key>
-                    <string>Communication controller</string>
-                    <key>model</key>
-                    <string>C610/X99 series chipset MEI Controller #1</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x16,0x1)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,22,1</string>
-                    <key>device_type</key>
-                    <string>Communication controller</string>
-                    <key>model</key>
-                    <string>C610/X99 series chipset MEI Controller #2</string>
-                </dict>
                 <key>PciRoot(0x0)/Pci(0x1A,0x0)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
@@ -441,43 +402,25 @@
                     <key>model</key>
                     <string>C610/X99 series chipset USB Enhanced Host Controller #2</string>
                 </dict>
-                <key>PciRoot(0x0)/Pci(0x1C,0x0)</key>
+                <key>PciRoot(0x0)/Pci(0x1B,0x0)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
-                    <string>Internal@0,28,0</string>
+                    <string>Internal@0,27,0</string>
                     <key>device_type</key>
-                    <string>PCI bridge</string>
+                    <string>Audio device</string>
+                    <key>layout-id</key>
+                    <data>DAAAAA==</data>
                     <key>model</key>
-                    <string>C610/X99 series chipset PCI Express Root Port #1</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x1C,0x3)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,28,3</string>
-                    <key>device_type</key>
-                    <string>PCI bridge</string>
-                    <key>model</key>
-                    <string>C610/X99 series chipset PCI Express Root Port #4</string>
+                    <string>C610/X99 series chipset HD Audio Controller</string>
                 </dict>
                 <key>PciRoot(0x0)/Pci(0x1C,0x3)/Pci(0x0,0x0)</key>
                 <dict>
-                    <key>AAPL,ig-platform-id</key>
-                    <data>AAAWFg==</data>
                     <key>AAPL,slot-name</key>
                     <string>Internal@0,28,3/0,0</string>
                     <key>device_type</key>
                     <string>Ethernet controller</string>
                     <key>model</key>
                     <string>RTL8111/8168/8211/8411 PCI Express Gigabit Ethernet Controller</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x1C,0x7)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,28,7</string>
-                    <key>device_type</key>
-                    <string>PCI bridge</string>
-                    <key>model</key>
-                    <string>C610/X99 series chipset PCI Express Root Port #8</string>
                 </dict>
                 <key>PciRoot(0x0)/Pci(0x1C,0x7)/Pci(0x0,0x0)</key>
                 <dict>
@@ -510,10 +453,16 @@
                 <dict>
                     <key>AAPL,slot-name</key>
                     <string>Internal@0,31,2</string>
+                    <key>built-in</key>
+                    <data>AA==</data>
+                    <key>compatible</key>
+                    <string>pci8086,8c02</string>
+                    <key>device-id</key>
+                    <string>0x8C02</string>
                     <key>device_type</key>
-                    <string>SATA controller</string>
+                    <string>SATA Controller</string>
                     <key>model</key>
-                    <string>C610/X99 series chipset 6-Port SATA Controller [AHCI mode]</string>
+                    <string>Intel 8 Series/C220 Series Chipset Family SATA AHCI Controller</string>
                 </dict>
                 <key>PciRoot(0x0)/Pci(0x1F,0x3)</key>
                 <dict>
@@ -524,15 +473,6 @@
                     <key>model</key>
                     <string>C610/X99 series chipset SMBus Controller</string>
                 </dict>
-                <key>PciRoot(0x0)/Pci(0x3,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,3,0</string>
-                    <key>device_type</key>
-                    <string>PCI bridge</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D PCI Express Root Port 3</string>
-                </dict>
                 <key>PciRoot(0x0)/Pci(0x3,0x0)/Pci(0x0,0x0)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
@@ -542,51 +482,6 @@
                     <key>model</key>
                     <string>uPD720201 USB 3.0 Host Controller</string>
                 </dict>
-                <key>PciRoot(0x0)/Pci(0x5,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,5,0</string>
-                    <key>device_type</key>
-                    <string>System peripheral</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D Map/VTd_Misc/System Management</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x5,0x1)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,5,1</string>
-                    <key>device_type</key>
-                    <string>System peripheral</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D IIO Hot Plug</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x5,0x2)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,5,2</string>
-                    <key>device_type</key>
-                    <string>System peripheral</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D IIO RAS/Control Status/Global Errors</string>
-                </dict>
-                <key>PciRoot(0x0)/Pci(0x5,0x4)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@0,5,4</string>
-                    <key>device_type</key>
-                    <string>PIC</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D I/O APIC</string>
-                </dict>
-                <key>PciRoot(0x80)/Pci(0x2,0x0)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@128,2,0</string>
-                    <key>device_type</key>
-                    <string>PCI bridge</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D PCI Express Root Port 2</string>
-                </dict>
                 <key>PciRoot(0x80)/Pci(0x2,0x0)/Pci(0x0,0x0)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
@@ -594,43 +489,16 @@
                     <key>device_type</key>
                     <string>VGA compatible controller</string>
                     <key>model</key>
-                    <string>Radeon RX Vega 56</string>
+                    <string>Baffin [Radeon RX 550 640SP / RX 560/560X]</string>
                 </dict>
-                <key>PciRoot(0x80)/Pci(0x5,0x0)</key>
+                <key>PciRoot(0x80)/Pci(0x2,0x0)/Pci(0x0,0x1)</key>
                 <dict>
                     <key>AAPL,slot-name</key>
-                    <string>Internal@128,5,0</string>
+                    <string>Internal@128,2,0/0,1</string>
                     <key>device_type</key>
-                    <string>System peripheral</string>
+                    <string>Audio device</string>
                     <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D Map/VTd_Misc/System Management</string>
-                </dict>
-                <key>PciRoot(0x80)/Pci(0x5,0x1)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@128,5,1</string>
-                    <key>device_type</key>
-                    <string>System peripheral</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D IIO Hot Plug</string>
-                </dict>
-                <key>PciRoot(0x80)/Pci(0x5,0x2)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@128,5,2</string>
-                    <key>device_type</key>
-                    <string>System peripheral</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D IIO RAS/Control Status/Global Errors</string>
-                </dict>
-                <key>PciRoot(0x80)/Pci(0x5,0x4)</key>
-                <dict>
-                    <key>AAPL,slot-name</key>
-                    <string>Internal@128,5,4</string>
-                    <key>device_type</key>
-                    <string>PIC</string>
-                    <key>model</key>
-                    <string>Xeon E7 v4/Xeon E5 v4/Xeon E3 v4/Xeon D I/O APIC</string>
+                    <string>Baffin HDMI/DP Audio [Radeon RX 550 640SP / RX 560/560X]</string>
                 </dict>
             </dict>
             <key>Delete</key>
@@ -696,7 +564,7 @@
                 </dict>
                 <dict>
                     <key>Arch</key>
-                    <string>x86_64</string>
+                    <string>Any</string>
                     <key>BundlePath</key>
                     <string>AppleALC.kext</string>
                     <key>Comment</key>
@@ -788,13 +656,13 @@
                     <key>Arch</key>
                     <string>Any</string>
                     <key>BundlePath</key>
-                    <string>CtlnaAHCIPort.kext</string>
+                    <string>AppleAHCIPort.kext</string>
                     <key>Comment</key>
-                    <string>V341.0.2</string>
+                    <string>V386</string>
                     <key>Enabled</key>
                     <false/>
                     <key>ExecutablePath</key>
-                    <string>Contents/MacOS/CtlnaAHCIPort</string>
+                    <string>Contents/MacOS/AppleAHCIPort</string>
                     <key>MaxKernel</key>
                     <string></string>
                     <key>MinKernel</key>
@@ -938,6 +806,54 @@
                     <true/>
                     <key>Identifier</key>
                     <string>com.apple.iokit.IO80211Family</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>Strategy</key>
+                    <string>Disable</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Identifier</key>
+                    <string>com.apple.DriverKit-IDUserDockChannelSerial</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>Strategy</key>
+                    <string>Disable</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Identifier</key>
+                    <string>com.apple.driverkit.AppledUserHIODrivers</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>Strategy</key>
+                    <string>Disable</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Identifier</key>
+                    <string>com.apple.iokit.IOAHCIBlockStorage</string>
                     <key>MaxKernel</key>
                     <string></string>
                     <key>MinKernel</key>
